# myfirst-ai-harness

./: .env.nvidia.example  .env.ollama.example  .gitignore  Dockerfile  HarnessFlowChart-v1.md  HarnessFlowChart-v2.md  README.md  compat-hybrid-test.json  docker-compose.multi-device.yaml  docker-compose.nvidia.yaml  harness-local.yaml  harness-multi-device-docker.yaml  harness-multi-device.yaml  harness-nvidia.yaml  harness-ollama.yaml  harness-qwen-hybrid-live.yaml  harness.yaml  mock_harness_engine.py  mock_harness_route.yaml  mock_layered_router_harness.py  mock_policy_router.py  mock_route_registry.yaml  pyproject.toml  readme.me  real_ai_harness.py  real_harness_routes.yaml  temp.md
.github/workflows/: harness-ci.yml
deployment/: readme.me
docs/: api-surface-and-launch.md  core-pipeline-and-policy-control.md  local-model-backend-abstraction.md  tooling-validation-safety-traces.md
harness/: __init__.py  cli.py  config.py  contracts.py  evidence.py  execution_state.py  guards.py  local_model_provider.py  manifest_schema.py  oneshot.py  readme.me  retrieval.py  router.py  runtime.py  server.py  tools.py  tools_registry.py  trace_cache.py  types.py  validation.py
harness/adapters/: __init__.py  base.py  llama_cpp_client.py  nvidia_nim_client.py  openai_compatible_client.py  readme.me
scripts/: Benchmark-FullCoverageLoadout.ps1  Benchmark-MultiDeviceHarness.ps1  Invoke-HarnessFullPromptBenchmark.ps1  Invoke-HarnessOneShot.ps1  Smoke-MultiDeviceHarness.ps1  Smoke-MultiDeviceHarnessPhase2.ps1  run_parity_sanity.py
tests/benchmarks/: run_trace_regression.py
(+15 files in other folders)
