[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myfirst-ai-harness"
version = "0.1.0"
description = "Local LLM harness with control-plane routing for non-thinking and thinking workflows"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.9",
  "httpx>=0.28",
  "PyYAML>=6.0",
  "python-dateutil>=2.9"
]

[project.scripts]
harnessd = "harness.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["harness", "harness.adapters"]

[project.optional-dependencies]
test = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24"
]
transformers = [
  "transformers>=4.43",
  "torch>=2.3"
]
llamacpp = [
  "llama-cpp-python>=0.2.90"
]
local-models = [
  "transformers>=4.43",
  "torch>=2.3",
  "llama-cpp-python>=0.2.90"
]
